<resources>
    <string name="app_name">FasterPay</string>
    <string name="no_cred_found">Wrong email or password</string>
    <string name="user_not_found">User not found</string>
    <string name="already_registered_user">This email is already registered to other account.</string>
    <string name="sign_in">Sign In</string>
    <string name="user_your">User your</string>
    <string name="account">account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">I forgot password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="ok">OK</string>
    <string name="not_valid_email">Email is invalid</string>
    <string name="empty_password">Password is empty</string>
    <string name="to_use">to use</string>
    <string name="create_a_personal_account">Create a Personal Account</string>
    <string name="password_criteria">Password must be at least 8 characters.\nMust include: (1 uppercase, 1 digit, 1 lowercase)</string>
    <string name="coming_soon">Coming soon</string>
    <string name="legal_first_name">Legal First Name</string>
    <string name="legal_last_name">Legal Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="not_valid_password">Password is invalid</string>
    <string name="empty_first_name">First name is empty</string>
    <string name="empty_last_name">Last name is empty</string>
    <string name="enter_your_birth_date">Please enter your birth date</string>
    <string name="privacy_text_check_box">I have read and agree to Passport.io User Agreement and Privacy Policy.\nI allow FasterPay to use my Passport.io data</string>
    <string name="phone_number">Phone Number</string>
    <string name="invalid_phone_number">Phone number is invalid</string>
    <string name="privacy_terms_not_accepted">Please accept our terms of privacy policy</string>
    <string name="wallet">Wallet</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="returned_from">Returned from %s</string>
    <string name="paid_to">Paid to %s</string>
    <string name="available_balance">Available balance</string>
    <string name="top_up">Top Up</string>
    <string name="vault">Vault</string>
    <string name="no_transactions">No Transactions</string>
    <string name="notifications">Notifications</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="transaction_already_done">Transaction has been executed before please try other one.</string>
    <string name="place_qr_code_frame">Place QR code in the frame to scan it</string>
    <string name="camera_error">\"Camera initialization error: %s</string>
    <string name="invalid_qr_code">Invalid QR code</string>
    <string name="payment">Payment</string>
    <string name="total_amount">Total amount</string>
    <string name="default_payment_method">Default payment method</string>
    <string name="fasterbay_balance">FasterBay balance</string>
    <string name="subtotal">Subtotal</string>
    <string name="fee">Fee:</string>
    <string name="pay">Pay</string>
    <string name="congrats_transaction_completed">"Congratulations transactions has been completed successfully "</string>
    <string name="your_balance_not_sufficient">Your available balance is not sufficient to pay this</string>
    <string name="needs_camera_permission">FastPay needs camera permission to scan codes</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
</resources>