<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.signup.SignUpFragment"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/auth_padding"
            android:gravity="center_horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_logo_med_height"
                app:srcCompat="@drawable/passport_logo"
                android:scaleType="fitXY"
                android:layout_marginBottom="@dimen/margin_l"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextTitleWhite"
                android:text="@string/create_a_personal_account"
                android:layout_marginBottom="@dimen/margin_s"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRegularWhite"
                android:text="@string/to_use"
                android:layout_marginBottom="@dimen/margin_l"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_logo_med_height"
                app:srcCompat="@drawable/faster_pay_text_logo"
                android:layout_marginBottom="@dimen/margin_l"/>

            <EditText android:id="@+id/fSUEditTextEmail"
                style="@style/EditTextAuthStyle"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_marginBottom="@dimen/margin_l"
                android:importantForAutofill="no"
                android:text="@={email}"/>

            <EditText android:id="@+id/fSUEditTextPassword"
                style="@style/EditTextAuthStyle"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginBottom="@dimen/margin_s"
                android:importantForAutofill="no"
                android:text="@={password}"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextSmallWhite"
                android:text="@string/password_criteria"
                android:layout_marginBottom="@dimen/margin_s"/>
            <EditText android:id="@+id/fSUEditTextFirstName"
                style="@style/EditTextAuthStyle"
                android:inputType="textPersonName"
                android:hint="@string/legal_first_name"
                android:layout_marginBottom="@dimen/margin_l"
                android:importantForAutofill="no"
                android:text="@={firstName}"/>

            <EditText android:id="@+id/fSUEditTextLastName"
                style="@style/EditTextAuthStyle"
                android:inputType="textPersonName"
                android:hint="@string/legal_last_name"
                android:layout_marginBottom="@dimen/margin_l"
                android:importantForAutofill="no"
                android:text="@={lastName}"/>

            <EditText android:id="@+id/fSUEditTextPhoneNumber"
                style="@style/EditTextAuthStyle"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:layout_marginBottom="@dimen/margin_l"
                android:importantForAutofill="no"
                android:text="@={phoneNumber}"/>

            <TextView android:id="@+id/fSUTextViewBirthDate"
                style="@style/EditTextAuthStyle"
                android:hint="@string/birth_date"
                android:layout_marginBottom="@dimen/margin_l"
                android:importantForAutofill="no"
                android:text="@{TextFormatter.formatDate(formatter, birthDate)}"
                android:onClick="@{() -> callbacks.clickedBirthDate()}"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextSmallWhite"
                android:text="@string/privacy_text_check_box"
                android:gravity="top"
                android:paddingStart="@dimen/margin_s"
                tools:ignore="RtlSymmetry"
                android:layout_marginBottom="@dimen/margin_l"
                android:checked="@={policyAccepted}"/>

            <Button android:id="@+id/fSUBtnSignUp"
                style="@style/BtnOrangeStyle"
                android:text="@string/sign_up"
                android:layout_marginBottom="@dimen/margin_m"
                android:onClick="@{() -> callbacks.clickedSignUp()}"/>

            <Button android:id="@+id/fSUBtnLogin"
                style="@style/BtnPurpleStyle"
                android:text="@string/log_in"
                android:layout_marginBottom="@dimen/margin_m"
                android:onClick="@{() -> callbacks.clickedLogin()}"/>
        </LinearLayout>
    </ScrollView>

    <data>
        <import type="androidx.lifecycle.MutableLiveData" />
        <import type="com.test.fasterpay.ui.formatters.TextFormatter" />
        <import type="java.util.Date" />
        <variable
            name="email"
            type="MutableLiveData&lt;String>" />
        <variable
            name="password"
            type="MutableLiveData&lt;String>" />
        <variable
            name="firstName"
            type="MutableLiveData&lt;String>" />
        <variable
            name="lastName"
            type="MutableLiveData&lt;String>" />
        <variable
            name="phoneNumber"
            type="MutableLiveData&lt;String>" />
        <variable
            name="birthDate"
            type="MutableLiveData&lt;Date>" />
        <variable
            name="policyAccepted"
            type="MutableLiveData&lt;Boolean>" />
        <variable
            name="callbacks"
            type="com.test.fasterpay.ui.fragments.signup.SignUpCallbacks" />
        <variable
            name="formatter"
            type="java.text.SimpleDateFormat" />
    </data>
</layout>